--- a/index.html
+++ b/index.html
@@ -3,7 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>David Ruiz</title>
+    <link href="styles.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="superior">
+        <article class="info">
+          <h1>Hola mundo</h1>
+          <p>
+            Lorem Ipsum es un texto de relleno que se utiliza comúnmente en
+            diseño gráfico y maquetación para simular contenido.
+          </p>
+        </article>
+        <section class="contenedor-de-clasificacion">
+          <figure class="clasificacion-1">
+            ⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews
+          </figure>
+          <figure class="clasificacion-2">
+            ⭐⭐⭐⭐⭐ Rated 5 Stars in ULSA
+          </figure>
+          <figure class="clasificacion-3">
+            ⭐⭐⭐⭐⭐ Rated 5 Stars in Corcoveo
+          </figure>
+        </section>
+      </section>
+      <section class="contenedor-de-tarjetas">
+        <figure class="tarjeta-1">Tarjeta David</figure>
+        <figure class="tarjeta-2">Tarjeta Oscar</figure>
+        <figure class="tarjeta-3">Tarjeta Adrian</figure>
+      </section>
+    </main>
+  </body>
 </html>
