--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>David Ruiz</title>
     <link href="styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -17,21 +23,36 @@
           </p>
         </article>
         <section class="contenedor-de-clasificacion">
-          <figure class="clasificacion-1">
+          <figure class="clasificacion-1, clasificacion">
             ⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews
           </figure>
-          <figure class="clasificacion-2">
+          <figure class="clasificacion-2, clasificacion">
             ⭐⭐⭐⭐⭐ Rated 5 Stars in ULSA
           </figure>
-          <figure class="clasificacion-3">
+          <figure class="clasificacion-3, clasificacion">
             ⭐⭐⭐⭐⭐ Rated 5 Stars in Corcoveo
           </figure>
         </section>
       </section>
       <section class="contenedor-de-tarjetas">
-        <figure class="tarjeta-1">Tarjeta David</figure>
-        <figure class="tarjeta-2">Tarjeta Oscar</figure>
-        <figure class="tarjeta-3">Tarjeta Adrian</figure>
+        <figure class="tarjeta-1, tarjeta">
+          <img src="images/image-anne.jpg" class="foto" />
+          <h4>David Ruiz</h4>
+          <p>Usuario</p>
+          <p>EL mundo es maravilloso</p>
+        </figure>
+        <figure class="tarjeta-2, tarjeta">
+          <img src="images/image-colton.jpg" class="foto" />
+          <h4>David Ruiz</h4>
+          <p>Usuario</p>
+          <p>EL mundo es maravilloso</p>
+        </figure>
+        <figure class="tarjeta-3, tarjeta">
+          <img src="images/image-irene.jpg" class="foto" />
+          <h4>David Ruiz</h4>
+          <p>Usuario</p>
+          <p>EL mundo es maravilloso</p>
+        </figure>
       </section>
     </main>
   </body>
