Implementacion de media querys para responsive design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <main>
+    <div class="container">
       <section class="superior">
         <article class="info">
           <h1>Hola mundo</h1>
@@ -23,37 +23,37 @@
           </p>
         </article>
         <section class="contenedor-de-clasificacion">
-          <figure class="clasificacion-1, clasificacion">
+          <figure class="clasificacion-1 clasificacion">
             ⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews
           </figure>
-          <figure class="clasificacion-2, clasificacion">
+          <figure class="clasificacion-2 clasificacion">
             ⭐⭐⭐⭐⭐ Rated 5 Stars in ULSA
           </figure>
-          <figure class="clasificacion-3, clasificacion">
+          <figure class="clasificacion-3 clasificacion">
             ⭐⭐⭐⭐⭐ Rated 5 Stars in Corcoveo
           </figure>
         </section>
       </section>
       <section class="contenedor-de-tarjetas">
-        <figure class="tarjeta-1, tarjeta">
+        <figure class="tarjeta-1 tarjeta">
           <img src="images/image-anne.jpg" class="foto" />
           <h4>David Ruiz</h4>
           <p>Usuario</p>
           <p>EL mundo es maravilloso</p>
         </figure>
-        <figure class="tarjeta-2, tarjeta">
+        <figure class="tarjeta-2 tarjeta">
           <img src="images/image-colton.jpg" class="foto" />
           <h4>David Ruiz</h4>
           <p>Usuario</p>
           <p>EL mundo es maravilloso</p>
         </figure>
-        <figure class="tarjeta-3, tarjeta">
+        <figure class="tarjeta-3 tarjeta">
           <img src="images/image-irene.jpg" class="foto" />
           <h4>David Ruiz</h4>
           <p>Usuario</p>
           <p>EL mundo es maravilloso</p>
         </figure>
       </section>
-    </main>
+    </div>
   </body>
 </html>
