Aplicacion de estilos

--- a/index.html
+++ b/index.html
@@ -24,33 +24,66 @@
         </article>
         <section class="contenedor-de-clasificacion">
           <figure class="clasificacion-1 clasificacion">
-            ⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews
+            <figure class="stars">
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+            </figure>
+            <p class="rated">Rated 5 Stars in Reviews</p>
           </figure>
           <figure class="clasificacion-2 clasificacion">
-            ⭐⭐⭐⭐⭐ Rated 5 Stars in ULSA
+            <figure class="stars">
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+            </figure>
+            <p class="rated">Rated 5 Stars in Corcoveo</p>
           </figure>
           <figure class="clasificacion-3 clasificacion">
-            ⭐⭐⭐⭐⭐ Rated 5 Stars in Corcoveo
+            <figure class="stars">
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+              <img src="images/icon-star.svg" />
+            </figure>
+            <p class="rated">Rated 5 Stars in ULSA</p>
           </figure>
         </section>
       </section>
       <section class="contenedor-de-tarjetas">
         <figure class="tarjeta-1 tarjeta">
-          <img src="images/image-anne.jpg" class="foto" />
-          <h4>David Ruiz</h4>
-          <p>Usuario</p>
+          <header class="foto-header">
+            <img src="images/0david.png" class="foto" />
+            <div>
+              <h4 class="nombre">David Ruiz</h4>
+              <p class="status">Usuario</p>
+            </div>
+          </header>
           <p>EL mundo es maravilloso</p>
         </figure>
         <figure class="tarjeta-2 tarjeta">
-          <img src="images/image-colton.jpg" class="foto" />
-          <h4>David Ruiz</h4>
-          <p>Usuario</p>
+          <header class="foto-header">
+            <img src="images/0oscar.png" class="foto" />
+            <div>
+              <h4 class="nombre">Oscar Reyes</h4>
+              <p class="status">Usuario</p>
+            </div>
+          </header>
           <p>EL mundo es maravilloso</p>
         </figure>
         <figure class="tarjeta-3 tarjeta">
-          <img src="images/image-irene.jpg" class="foto" />
-          <h4>David Ruiz</h4>
-          <p>Usuario</p>
+          <header class="foto-header">
+            <img src="images/0adrian.png" class="foto" />
+            <div>
+              <h4 class="nombre">Adrian Lainez</h4>
+              <p class="status">Usuario</p>
+            </div>
+          </header>
           <p>EL mundo es maravilloso</p>
         </figure>
       </section>
