--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container">
       <section class="superior">
         <article class="info">
-          <h1>Hola mundo</h1>
+          <h1>ULSA tiene calidad</h1>
           <p>
-            Lorem Ipsum es un texto de relleno que se utiliza comúnmente en
-            diseño gráfico y maquetación para simular contenido.
+            Este diseño fue hecho para la clase de programacion web. Un saludo
+            al ingeniero y a los que entren a ver esto.
           </p>
         </article>
         <section class="contenedor-de-clasificacion">
@@ -64,7 +64,7 @@
               <p class="status">Usuario</p>
             </div>
           </header>
-          <p>EL mundo es maravilloso</p>
+          <p>10/10, exceso de calidad y lo ultimo en frontend.</p>
         </figure>
         <figure class="tarjeta-2 tarjeta">
           <header class="foto-header">
@@ -74,7 +74,10 @@
               <p class="status">Usuario</p>
             </div>
           </header>
-          <p>EL mundo es maravilloso</p>
+          <p>
+            Ya van seis meses de 'capacitacion', ya estuvieras terminando los
+            otros proyectos que quedaron en el aire.
+          </p>
         </figure>
         <figure class="tarjeta-3 tarjeta">
           <header class="foto-header">
@@ -84,7 +87,7 @@
               <p class="status">Usuario</p>
             </div>
           </header>
-          <p>EL mundo es maravilloso</p>
+          <p>Como se ponen comentarios?</p>
         </figure>
       </section>
     </div>
